--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,3 +1,4 @@
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 canvas {
 	position: absolute;
 	top: 0px;
@@ -5,4 +6,8 @@ canvas {
 	left: 0px;
 	right: 0px;
 	margin: auto;
+}
+.navbar {
+	color: brown !important;
+	background-color: aqua !important;
 }
